rust/macros/tests/invalid/target/debug/deps/only_comma-cb9482cd28daf891.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/only_comma-cb9482cd28daf891.d: only_comma.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libonly_comma-cb9482cd28daf891.rmeta: only_comma.rs Cargo.toml

only_comma.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
